--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -8,11 +9,10 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp20"
-        android:layout_marginStart="@dimen/dp20"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/dp10"
-        android:text="@string/date"
-        android:textColor="@color/colorAccent" />
+        android:textColor="@color/colorAccent"
+        tools:text="@string/date" />
 
     <TextView
         android:id="@+id/title"
@@ -21,10 +21,10 @@
         android:layout_marginLeft="@dimen/dp20"
         android:layout_marginStart="@dimen/dp20"
         android:layout_marginTop="@dimen/dp10"
-        android:text="@string/title"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/sp20"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="@string/title" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -39,8 +39,8 @@
             android:layout_marginLeft="@dimen/dp20"
             android:layout_marginStart="@dimen/dp20"
             android:layout_marginTop="@dimen/dp10"
-            android:text="@string/section"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/colorAccent"
+            tools:text="@string/section" />
 
         <TextView
             android:id="@+id/author"
@@ -49,8 +49,8 @@
             android:layout_marginLeft="@dimen/dp20"
             android:layout_marginStart="@dimen/dp20"
             android:layout_marginTop="@dimen/dp10"
-            android:text="@string/author"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            tools:text="@string/author" />
     </LinearLayout>
 
 
